# crawler

./: .env  ARCHITECTURE.md  NOTES.md  README.md  REMAINING_WORK.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
services/frontier/: Dockerfile  pyproject.toml
services/frontier/src/frontier/: __init__.py  db.py  frontier_grpc_server.py  main.py
services/frontier/src/frontier/constants/: config.py
services/frontier/src/frontier/dto/: crawl.py
services/frontier/src/frontier/lib/: verify.py
services/frontier/src/frontier/models/: crawl_request.py
services/frontier/src/frontier/mq/: queue.py
services/master/: Dockerfile  RESPONSIBILITIES.md  pyproject.toml
services/master/src/: dev_watch.py
services/master/src/master/: __init__.py  db.py  main.py
services/master/src/master/config/: settings.py
services/master/src/master/core/: consumer.py  heartbeat.py  master_grpc_server.py  retry.py  task_dispatcher.py  worker_manager.py
services/master/src/master/docker/: create.py
services/master/src/master/infra/: create_worker.py  dead_letter.py  queue.py
services/master/src/master/proto/: master.proto  master_pb2.py  master_pb2.pyi  master_pb2_grpc.py
services/slave/: Dockerfile  pyproject.toml  test_meili.py
services/slave/src/: dev_watch.py
services/slave/src/slave/: __init__.py  config.py  consume.py  handler.py  main.py
services/slave/src/slave/consumers/: extractor.py  fetcher.py  indexer.py  parser.py
services/slave/src/slave/entities/: task.py  worker.py
services/slave/src/slave/infra/: queue.py
services/slave/src/slave/outbound/: crawl_request.py  master_client.py  meilisearch_client.py
services/slave/src/slave/runtime/: consumer.py  heartbeat.py
shared/: pyproject.toml
shared/src/shared/: config.py  utils.py
shared/src/shared/cache/: redis.py
shared/src/shared/database/: engine.py  setup_db.py
shared/src/shared/database/models/: crawl_requests.py  document.py  task.py  worker.py
shared/src/shared/protos/frontier/: frontier.proto  frontier_pb2.py  frontier_pb2.pyi  frontier_pb2_grpc.py
shared/src/shared/protos/master/: master.proto  master_pb2.py  master_pb2.pyi  master_pb2_grpc.py
shared/src/shared/queue/: base_consumer.py  base_publisher.py  connection.py  exchange.py
