[project]
name = "shared"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "bedantH", email = "bedanthota@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "aio-pika>=9.5.8",
    "asyncpg>=0.30.0",
    "grpcio>=1.76.0",
    "grpcio-tools>=1.76.0",
    "protobuf>=5.0.0",
    "psycopg2-binary>=2.9.11",
    "redis>=7.2.0",
    "sqlmodel>=0.0.31",
    "uuid>=1.30",
]

[project.scripts]
shared = "shared:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
package = true
