[project]
name = "frontier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "bedantH", email = "bedanthota@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "aioredis>=2.0.1",
    "beanie>=2.0.0",
    "fastapi>=0.120.0",
    "motor>=3.7.1",
    "pika>=1.3.2",
    "protego>=0.6.0",
    "pydantic[email]>=2.12.3",
    "pymongo>=4.15.3",
    "python-dotenv>=1.2.1",
    "redis>=7.2.0",
    "shared",
    "uvicorn>=0.38.0",
]

[project.scripts]
frontier = "frontier:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
shared = { workspace = true }
