[project]
name = "slave"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "bedantH", email = "bedanthota@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pika>=1.3.2",
    "python-dotenv>=1.2.1",
]

[project.scripts]
slave = "slave:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
